--- a/src/styles/ChatFlow.css
+++ b/src/styles/ChatFlow.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: #f5f5f5;
+  background-color: #121212;
 }
 
 /* Loading spinner styles */
@@ -35,9 +35,6 @@
 }
 
 /* Hide ReactFlow controls */
-.react-flow__controls {
-  display: none;
-}
 
 /* Improve node styling with flexbox */
 .react-flow__node {
@@ -53,6 +50,7 @@
 /* Improve edge styling */
 .react-flow__edge-path {
   stroke-width: 2;
+  stroke: #6a1b9a;
 }
 
 .react-flow__edge.animated .react-flow__edge-path {
